--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Jerry's Portfolio</h1>
     <h2>I am a Web Developer</h2>
     <hr>
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" width="200" alt="Movie Ranking Preview"/>
-    <h3><a href="../3.4 Birthday Invite Project/Invite.html">Birthday Invite Project</a></h3>
+    <h3><a href="./birthday-invite.html">Birthday Invite Project</a></h3>
     
     <img src="./assets/images/birthday-invite.png" width="200" alt="Birthday Invite"/>
     <hr>
@@ -20,5 +20,3 @@
 
 </body>
 </html>
-
-
